# Process this file with autoconf to produce a configure script.
# $Id:  $
# $Source:  $


# ------- Initialisation -------

# Init on arbitrary source file
AC_INIT(Db/dballoc.c)    

AC_MSG_RESULT([====== initialising ======])

# Add new configuration files

AC_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(wgandalf,0.2.0)

# ------- Checking -------

AC_MSG_RESULT([====== checking ======])

#Initialize libtool
#AM_PROG_LIBTOOL

AC_PROG_CC
AM_PROG_CC_C_O # for per-target flags

#Checks for libraries.
ACX_PTHREAD()
#Checks for header files.
#AC_HEADER_STDC
#AC_CHECK_HEADERS(sys/time.h unistd.h)
#Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST
#AC_HEADER_TIME
#Checks for library functions.
#AC_CHECK_FUNCS(gettimeofday)
#AC_CONFIG_HEADERS([])

AC_PROG_RANLIB
AC_PROG_INSTALL

# ----------- configuration options ----------

AC_MSG_RESULT([====== setting configuration options ======])

AC_MSG_CHECKING(for logging)
AC_ARG_ENABLE(logging,
[       --enable-logging     enable transaction logging],
logging=yes,logging=no)
if test "$logging" != no
then
    AC_DEFINE([USE_DBLOG], [1], [Use dblog module for transaction logging])
    AC_MSG_RESULT(enabled)
else
    AC_MSG_RESULT(disabled)
fi

AC_MSG_CHECKING(for queued locks)
AC_ARG_ENABLE(queued-locks,
[       --enable-queued-locks     enable lock queue],
queued_locks=yes,queued_locks=no)
if test "$queued_locks" != no
then
    AC_DEFINE([QUEUED_LOCKS], [1], [Use queued locks with local spinning])
    AC_MSG_RESULT(enabled)
else
    AC_MSG_RESULT(disabled)
fi

# ---------- Compiler flags --------

AC_MSG_RESULT([====== setting compiler flags ======])

CFLAGS="-g -Wall"

#CFLAGS="-O2 -Wall -pg"

#CFLAGS="-O3 -Wall"


AC_MSG_CHECKING(for gprof)
AC_ARG_ENABLE(gprof,
[       --enable-gprof     enable memory profiling with gprof],
gprof=yes,gprof=no)
if test "$gprof" != no
then
    CFLAGS="-pg $CFLAGS"
    AC_MSG_RESULT(enabled)
else
    AC_MSG_RESULT(no)
fi


# ---------- Final creation --------

AC_MSG_RESULT([====== final steps ======])

AC_SUBST(Main)
AC_SUBST(Db)

AC_OUTPUT([
Makefile
Main/Makefile
])





