#
# - - - - reasoner sources - - - -

noinst_LTLIBRARIES = libReasoner.la
libReasoner_la_SOURCES = types.h rincludes.h \
  printerrutils.c printerrutils.h\
  rmain.c rmain.h\
  glb.c glb.h\
  rgenloop.c rgenloop.h\
  derive.c derive.h\
  subsume.c subsume.h\
  unify.c unify.h\
  build.c build.h\
  clstore.c clstore.h\
  clterm.c clterm.h\
  mem.c mem.h

